src/test/deca/syntax/valid/created/voidElmt/fields.deca
// Description:
//      Utilisation d'un champ void
// Resultat:
//      OK

class A {
    void x;
}