src/test/deca/syntax/invalid/created/class_without/class_noIdentifier.deca
// Description:
//      Utilisation d'une classe sans identifier
// Resultats:
//      Error syntax Ligne 6 : missing IDENT at '{'

class {
    
}